# heroes-replay

./: .gitignore  README copy.md  README.md  docker-compose.yaml  index.html  pyproject.toml  rename.sh
_exports/: colors.json
compiled_ui/: index.html
database/matches/: 2021.json  2024.json  lexiav_duel.json
database/players/: lexiav.json  specialiste.json  stygianone.json
database/static/: colors.json  heroes.json  towns.json
docs/: chunk-2FH5WTPZ.js  chunk-2FV3PBMR.js  chunk-2RQ37DE2.js  chunk-2TKDRQD3.js  chunk-2X6CDHQR.js  chunk-5IVRDY4W.js  chunk-6JS37GRH.js  chunk-7LOGURZU.js  chunk-A4ST6BAP.js  chunk-CHBRF5GI.js  chunk-EKGPJRLF.js  chunk-FEVE27UK.js  chunk-H5TRGNX6.js  chunk-HHWGL5G2.js  chunk-KYOZFE75.js  chunk-MFFXIOOJ.js  chunk-O4UUTZQ3.js  chunk-PMCZKYPI.js  chunk-QIJGIMYZ.js  chunk-QSPW7NK7.js  chunk-SAJAUDVL.js  chunk-T5ZWLTBP.js  chunk-UCOV7RIU.js  chunk-VIYJ5LOF.js  chunk-VPWOTKB6.js  chunk-YJXI75YL.js  index.html  main-2W4AW4DF.js  main-36JZ2SQ7.js  main-3TIZGQS2.js  main-7ED2OY2X.js  main-7OTOONKZ.js  main-7UGUCKLG.js  main-BNCNDSVS.js  main-F3ORNV6Q.js  main-GKKXXVK3.js  main-HAJDTOD4.js  main-HZMQ5JXI.js  main-IQT33VQ7.js  main-LVL62ZTD.js  (+8 more)
docs/assets/: colors.ndjson
docs/database/: colors.ndjson  index.json  index_old.json  matches.ndjson  static.json
h3/: app.py  config.py  db.py
h3/generate/: __init__.py  back_restore.py  towns.py  ui_exporter.py
h3/models/: __init__.py  heroes.py  match.py  player.py  (+3 more)
h3backend/: app.py
homm3/: generator.py  main.py  models.py
ui/: README.md  angular.json  package-lock.json  package.json
(+55 files in other folders)
